# Mediadaten_Analyse

./: .gitignore  MANIFEST.in  README.md  inhalt.txt  pyproject.toml  requirements.txt  setup.py
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
data/: credibility_scores.xlsx  mediadaten_Audi_Q1_2025.xlsx  mediadaten_Audi_Q2_2025.xlsx  mediadaten_BMW_Q1_2025.xlsx  mediadaten_BMW_Q2_2025.xlsx  mediadaten_Mercedes-Benz_Q1_2025.xlsx  mediadaten_Mercedes-Benz_Q2_2025.xlsx
mediadaten_analyse/: __init__.py  main.py
mediadaten_analyse/analyse/: __init__.py  analyse.py  config_loader.py  database.py
mediadaten_analyse/tools/: query_tool.py
mediadaten_analyse/visualisierung/: __init__.py  visualizer.py
outputs/: SQLite ansehen.py
